packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_type_hash__multiple_snip12_attributes.snap
---
source: src/tests/test_type_hash.rs
expression: result
---
TokenStream:

pub struct MyType {
    #[snip12(name: "ts")]
    #[snip12(kind: "timestamp")]
    pub timestamp: u128,
}


Diagnostics:

====
Error: Only one snip12 attribute can be applied to a member.
====

AuxData:

None
