packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_type_hash__name_attribute.snap
---
source: src/tests/test_type_hash.rs
expression: result
snapshot_kind: text
---
TokenStream:

pub enum MyEnum {
    #[snip12(name: "Variant 1", kind: "(felt252, felt252, ClassHash, NftId)")]
    Variant1: (felt252, felt252, ClassHash, NftId),
    #[snip12(name: "Variant 2", kind: "Array<TokenAmount>")]
    Variant2: Array<TokenAmount>,
    #[snip12(name: "Variant 3")]
    Variant3: Span<ClassHash>,
    #[snip12(name: "Variant 4", kind: "(ContractAddress, TokenAmount)")]
    Variant4: (ContractAddress, TokenAmount),
    #[snip12(name: "Variant 5")]
    Variant5: Array<ContractAddress>,
}
pub const MY_ENUM_TYPE_HASH: felt252 =
    0x3c7d0abfeb251d79dfafa4f0249bcd5f6d8c28dc3a75c25fefa455af910915;



Diagnostics:

None

AuxData:

None
