packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_type_hash__preset_types.snap
---
source: src/tests/test_type_hash.rs
expression: result
snapshot_kind: text
---
TokenStream:

pub struct MyType {
    #[snip12(kind: "TokenAmount")]
    pub token_amount: TokenAmount,
    #[snip12(kind: "NftId")]
    pub nft_id: NftId,
    pub u256: u256,
}
pub fn __MY_TYPE_encoded_type() {
    println!(
        "\"MyType\"(\"token_amount\":\"TokenAmount\",\"nft_id\":\"NftId\",\"u256\":\"u256\")\"NftId\"(\"collection_address\":\"ContractAddress\",\"token_id\":\"u256\")\"TokenAmount\"(\"token_address\":\"ContractAddress\",\"amount\":\"u256\")\"u256\"(\"low\":\"u128\",\"high\":\"u128\")",
    );
}
pub const MY_TYPE_TYPE_HASH: felt252 =
    0x270376e5e39650aab056d468f8528719f2223c64bb6bcf032f97540c474c050;



Diagnostics:

None

AuxData:

None
