packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_type_hash__preset_types_enum.snap
---
source: src/tests/test_type_hash.rs
expression: result
snapshot_kind: text
---
TokenStream:

pub enum MyEnum {
    #[snip12(kind: "TokenAmount")]
    Variant1: TokenAmount,
    #[snip12(kind: "NftId")]
    Variant2: NftId,
    Variant3: u256,
}
pub fn __MY_ENUM_encoded_type() {
    println!(
        "\"MyEnum\"(\"Variant1\"(\"TokenAmount\"),\"Variant2\"(\"NftId\"),\"Variant3\"(\"u256\"))\"NftId\"(\"collection_address\":\"ContractAddress\",\"token_id\":\"u256\")\"TokenAmount\"(\"token_address\":\"ContractAddress\",\"amount\":\"u256\")\"u256\"(\"low\":\"u128\",\"high\":\"u128\")",
    );
}
pub const MY_ENUM_TYPE_HASH: felt252 =
    0x3f357bdfbd3bf793be39571939399423a9396d2d28a8efcc6d8b9ca6e762651;



Diagnostics:

None

AuxData:

None
