packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_type_hash__raw_schema_only_basic_is_rejected.snap
---
source: src/tests/test_type_hash.rs
expression: result
---
TokenStream:

pub struct MyType {
    pub version: shortstring,
}


Diagnostics:

====
Error: Inner custom types are not supported yet.
====

AuxData:

None
