packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_type_hash__snip12_type_attribute_empty.snap
---
source: src/tests/test_type_hash.rs
expression: result
snapshot_kind: text
---
TokenStream:

// selector!(
//   "\"MyType\"(\"name\":\"felt\")"
// );
pub const MY_TYPE_TYPE_HASH: felt252 =
    0x1c4049af415d731aa5a71e9e2807b93cc65416ba2097d6c03522132966fcfd7;


Diagnostics:

None

AuxData:

None
